--- a/content_strategy_frontend/package.json
+++ b/content_strategy_frontend/package.json
@@ -18,6 +18,9 @@
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.2.0",
+    "@testing-library/user-event": "^14.5.2",
     "cypress": "^13.6.4",
     "http-server": "^14.1.1",
     "react-test-renderer": "^18.2.0"
