--- a/content_strategy_frontend/package.json
+++ b/content_strategy_frontend/package.json
@@ -21,8 +21,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
+    "axe-core": "^4.9.1",
     "cypress": "^13.6.4",
+    "cypress-axe": "^1.5.0",
     "http-server": "^14.1.1",
+    "jest-axe": "^7.0.1",
     "react-test-renderer": "^18.2.0"
   },
   "browserslist": [
